--- a/src/assets/css/_example/_example.css
+++ b/src/assets/css/_example/_example.css
@@ -23,3 +23,14 @@ webview{
     justify-items: center;
     background: rgba(0,0,0,.4);
 } */
+
+#my-extension-root{
+  width: 400px;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    z-index: 2147483647;
+    background-color: white;
+    box-shadow: 0px 0px 5px #0000009e;
+}
